# esp32-c6-opentherm

./: .env.example  .gitignore  CMakeLists.txt  CONTEXT.md  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.plans/: v2-layered-ot-zigbee-mapping.md
components/opentherm/: CMakeLists.txt  OpenTherm.cpp  OpenTherm.h  opentherm_wrapper.cpp  opentherm_wrapper.h  ot_catalog_nvs.c  ot_catalog_nvs.h  ot_data_catalog.c  ot_data_catalog.h  ot_discover.c  ot_discover.h  ot_encoding.c  ot_encoding.h  ot_runtime_catalog.c  ot_runtime_catalog.h
docs/: okf_ideas.md
docs/adr/: 0001-okf-knowledge-system.md  0002-layered-ot-zigbee-mapping.md
knowledge/: index.md  log.md
knowledge/bridge/: end-to-end-control-flow.md  index.md  local-temperature-mapping.md  opentherm-gpio-wiring.md  water-setpoint-mapping.md
knowledge/esp-idf/: esp32-c6-get-started.md  index.md
knowledge/esp32/: esp32-c6-datasheet.md  index.md  (+3 more)
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  ot_bridge.c  ot_bridge.h  ot_serial_harness.c  ot_serial_harness.h  ot_zcl_route.c  ot_zcl_route.h  zb_ot_bridge.c  zb_ot_bridge.h  zb_thermostat_ed.c  zb_thermostat_ed.h  zcl_utility.c  zcl_utility.h
tools/okf/: pyproject.toml
tools/okf/okf/: __init__.py  __main__.py  bundle.py  cli.py  export.py  index.py  lint.py  validate.py  visualize.py
tools/okf/okf/viewer/: NOTICE.md
tools/okf/okf/viewer/static/: viz.css  viz.js
tools/okf/okf/viewer/templates/: viz.html
tools/okf/tests/: test_lint.py  test_validate.py  test_visualize.py
(+44 files in other folders)
